// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`OrderChooser component snaps renderers should render OrderChooser in asc mode 1`] = `
<TooltipTrigger
  label="Sort by date"
  tooltipPlacement="top"
>
  <Button
    active={false}
    aria-label="Sort by date"
    block={false}
    bsClass="btn"
    bsStyle="link"
    className="tc-resource-picker-order-chooser theme-tc-resource-picker-order-chooser"
    disabled={false}
  >
    <Icon
      name="talend-sort-desc"
    />
    <Icon
      className="tc-resource-picker-order-indicator theme-tc-resource-picker-order-indicator theme-asc"
      name="talend-caret-down"
    />
  </Button>
</TooltipTrigger>
`;

exports[`OrderChooser component snaps renderers should render OrderChooser in default mode 1`] = `
<TooltipTrigger
  label="Sort by date"
  tooltipPlacement="top"
>
  <Button
    active={false}
    aria-label="Sort by date"
    block={false}
    bsClass="btn"
    bsStyle="link"
    className="tc-resource-picker-order-chooser theme-tc-resource-picker-order-chooser"
    disabled={false}
  >
    <Icon
      name="talend-sort-desc"
    />
    <Icon
      className="tc-resource-picker-order-indicator theme-tc-resource-picker-order-indicator"
      name="talend-caret-down"
    />
  </Button>
</TooltipTrigger>
`;
